Bug: site not responsive on mobile anymore

--- a/yo/app/styles/main.css
+++ b/yo/app/styles/main.css
@@ -98,14 +98,14 @@ textarea.form-control {
 @media screen and (min-height: 800px) {
     .main-panel {
         min-width: 600px;
-        max-width: 750px;
+        max-width: 800px;
     }
 }
 
 @media screen and (min-height: 900px) {
     .main-panel {
-        min-width: 750px;
-        max-width: 800px;
+        min-width: 850px;
+        max-width: 900px;
     }
 }
 
@@ -117,7 +117,7 @@ textarea.form-control {
 
 @media screen and (max-width: 1020px) {
     .main-panel {
-        min-width: 800px;
-        max-width: 900px;
+        /*min-width: 800px;*/
+        /*max-width: 900px;*/
     }
 }
